--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "framer-motion": "^12.0.1",
-    "next": "^15.1.9",
+    "next": "15.5.9",
     "next-intl": "^3.26.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.0.3",
+    "react-dom": "^19.0.3",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^4.1.2",
     "swiper": "^11.2.2"
